[package]
name = "quinn-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.24"
quinn = "0.8.5"
rcgen = "0.9.3"
rustls = { version = "0.20.6", features = ["quic"] }
tokio = { version = "1.20.1", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }
