[package]
name = "quinn-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kynet = { version = "0.1", path = "../kyproto/kynet", features = ["kynet-quinn"] }
rcgen = "0.11.3"
rustls = { version = "0.21.7", features = ["quic"] }
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }
